<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin">

        <ImageButton
            android:id="@+id/ib_addToFavorites"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_or_remove_from_favorites"/>

        <ImageView
            android:id="@+id/iv_subredditImage"
            android:layout_width="@dimen/sub_image"
            android:layout_height="@dimen/sub_image"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_reddit_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/subreddit_image"/>

        <TextView
            android:id="@+id/tv_subredditDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            tools:text="Subreddit Description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_subredditImage"
            app:layout_constraintTop_toBottomOf="@+id/tv_subredditTitle" />

        <TextView
            android:id="@+id/tv_subscriberCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/subscribers_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_subredditImage"
            app:layout_constraintTop_toBottomOf="@+id/tv_subredditDesc" />

        <TextView
            android:id="@+id/tv_subredditTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            tools:text="Subreddit Title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@+id/ib_addToFavorites"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_subredditImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        tools:showIn="@layout/single_popular" />

</LinearLayout>