...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/tv_postText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_top"
            tools:text="Post Text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
...
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/post_video"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_top" />

    </LinearLayout>
...
