<?xml version="1.0" encoding="utf-8"?>
<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_gravity="center"
    android:indeterminateTint="@color/colorPrimary"
    android:id="@+id/progressBar"
    tools:showIn="@layout/rv_populars"></ProgressBar>