<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        android:contentDescription="@string/favorites"/>

    <item
        android:id="@+id/bottom_popular"
        android:title="@string/popular"
        android:icon="@drawable/ic_popular"
        android:contentDescription="@string/popular"/>

    <item
        android:id="@+id/bottom_news"
        android:title="@string/news"
        android:icon="@drawable/ic_news"
        android:contentDescription="@string/news"/>

</menu>